// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress[Base] should render correctly  1`] = `
<div
  class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
  style="width: 400px;"
>
  <div
    class="soui-progress-line-bg"
  >
    <div
      class="soui-progress-line-front"
      style="width: 75%;"
    />
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about animation 1`] = `
<div>
  <div>
    <div
      class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
      style="width: 400px;"
    >
      <div
        class="soui-progress-line-bg"
      >
        <div
          class="soui-progress-line-front"
          style="width: 0%;"
        />
      </div>
      <div
        class="soui-progress-content"
      >
        <div
          style="width: 50px;"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 24px;"
  >
    <div
      class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-success"
      style="width: 64px; height: 64px;"
    >
      <svg
        viewBox="0 0 64 64"
      >
        <circle
          class="soui-progress-circle-bg"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-width="4"
        />
        <circle
          class="soui-progress-circle-front"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-dasharray="0,188.49555921538757"
          stroke-linecap="round"
          stroke-width="0"
        />
      </svg>
      <div
        class="soui-progress-content"
      >
        0%
      </div>
    </div>
  </div>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin-top: 24px;"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about circle 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M12 3.00049C11.4477 3.00049 11 3.4482 11 4.00049C11 4.55277 11.4477 5.00049 12 5.00049C12.5523 5.00049 13 4.55277 13 4.00049C13 3.4482 12.5523 3.00049 12 3.00049ZM12 7.00049C11.4477 7.00049 11 7.4482 11 8.00049V20.0005C11 20.5528 11.4477 21.0005 12 21.0005C12.5523 21.0005 13 20.5528 13 20.0005V8.00049C13 7.4482 12.5523 7.00049 12 7.00049Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-warning"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="131.9468914507713,56.54866776461628"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M12 3C11.4477 3 11 3.44772 11 4V16C11 16.5523 11.4477 17 12 17C12.5523 17 13 16.5523 13 16V4C13 3.44772 12.5523 3 12 3ZM12 19C11.4477 19 11 19.4477 11 20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20C13 19.4477 12.5523 19 12 19Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-success"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="150.79644737231007,37.6991118430775"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-danger"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="169.64600329384882,18.84955592153875"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about color 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      40%
    </div>
  </div>
  <br />
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%;"
      >
        <div
          class="soui-progress-content"
        >
          75%
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <defs>
        <lineargradient
          id="progress-linear"
          x1="50%"
          x2="50%"
          y1="0%"
          y2="100%"
        >
          <stop
            offset="0%"
            stop-color="#19A9FA"
          />
          <stop
            offset="100%"
            stop-color="#7949FF"
          />
        </lineargradient>
      </defs>
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
        style="stroke: url('#progress-linear');"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      60%
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about lineInner 1`] = `
<div
  style="display: flex; flex-direction: column; gap: 32px; width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner soui-progress-line-inner-right"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 0%;"
      >
        <div
          class="soui-progress-content"
        >
          0%
        </div>
      </div>
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 22"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_3562_7307)"
        >
          <path
            clip-rule="evenodd"
            d="M8.00002 18.3333C12.0501 18.3333 15.3334 15.0501 15.3334 11C15.3334 6.94992 12.0501 3.66667 8.00002 3.66667C3.94993 3.66667 0.666687 6.94992 0.666687 11C0.666687 15.0501 3.94993 18.3333 8.00002 18.3333ZM7.62486 16.3366C7.24225 16.3366 6.93814 16.0153 6.9592 15.6332L7.28571 9.70936C7.30519 9.35596 7.59743 9.07938 7.95137 9.07938H8.0495C8.40343 9.07938 8.69568 9.35596 8.71515 9.70936L9.04167 15.6332C9.06272 16.0153 8.75862 16.3366 8.37601 16.3366H7.62486ZM8.88844 7.83198C8.64844 8.05597 8.34444 8.16798 7.99244 8.16798C7.64044 8.16798 7.35244 8.05597 7.12844 7.83198C6.87244 7.60798 6.76044 7.31997 6.76044 6.96797C6.76044 6.61598 6.87244 6.32797 7.12844 6.10397C7.35244 5.87998 7.64044 5.75197 7.99244 5.75197C8.34444 5.75197 8.63244 5.86398 8.88844 6.08797C9.11244 6.31197 9.24044 6.61598 9.24044 6.96797C9.24044 7.31997 9.11244 7.60798 8.88844 7.83198Z"
            fill="#197AFA"
            fill-rule="evenodd"
          />
        </g>
        <defs>
          <clippath
            id="clip0_3562_7307"
          >
            <rect
              fill="white"
              height="16"
              transform="translate(0 3)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner soui-progress-line-inner-right"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 5%;"
      >
        <div
          class="soui-progress-content"
        >
          5%
        </div>
      </div>
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 22"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_3562_7307)"
        >
          <path
            clip-rule="evenodd"
            d="M8.00002 18.3333C12.0501 18.3333 15.3334 15.0501 15.3334 11C15.3334 6.94992 12.0501 3.66667 8.00002 3.66667C3.94993 3.66667 0.666687 6.94992 0.666687 11C0.666687 15.0501 3.94993 18.3333 8.00002 18.3333ZM7.62486 16.3366C7.24225 16.3366 6.93814 16.0153 6.9592 15.6332L7.28571 9.70936C7.30519 9.35596 7.59743 9.07938 7.95137 9.07938H8.0495C8.40343 9.07938 8.69568 9.35596 8.71515 9.70936L9.04167 15.6332C9.06272 16.0153 8.75862 16.3366 8.37601 16.3366H7.62486ZM8.88844 7.83198C8.64844 8.05597 8.34444 8.16798 7.99244 8.16798C7.64044 8.16798 7.35244 8.05597 7.12844 7.83198C6.87244 7.60798 6.76044 7.31997 6.76044 6.96797C6.76044 6.61598 6.87244 6.32797 7.12844 6.10397C7.35244 5.87998 7.64044 5.75197 7.99244 5.75197C8.34444 5.75197 8.63244 5.86398 8.88844 6.08797C9.11244 6.31197 9.24044 6.61598 9.24044 6.96797C9.24044 7.31997 9.11244 7.60798 8.88844 7.83198Z"
            fill="#197AFA"
            fill-rule="evenodd"
          />
        </g>
        <defs>
          <clippath
            id="clip0_3562_7307"
          >
            <rect
              fill="white"
              height="16"
              transform="translate(0 3)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%;"
      >
        <div
          class="soui-progress-content"
        >
          10%
        </div>
      </div>
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 22"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_3562_7307)"
        >
          <path
            clip-rule="evenodd"
            d="M8.00002 18.3333C12.0501 18.3333 15.3334 15.0501 15.3334 11C15.3334 6.94992 12.0501 3.66667 8.00002 3.66667C3.94993 3.66667 0.666687 6.94992 0.666687 11C0.666687 15.0501 3.94993 18.3333 8.00002 18.3333ZM7.62486 16.3366C7.24225 16.3366 6.93814 16.0153 6.9592 15.6332L7.28571 9.70936C7.30519 9.35596 7.59743 9.07938 7.95137 9.07938H8.0495C8.40343 9.07938 8.69568 9.35596 8.71515 9.70936L9.04167 15.6332C9.06272 16.0153 8.75862 16.3366 8.37601 16.3366H7.62486ZM8.88844 7.83198C8.64844 8.05597 8.34444 8.16798 7.99244 8.16798C7.64044 8.16798 7.35244 8.05597 7.12844 7.83198C6.87244 7.60798 6.76044 7.31997 6.76044 6.96797C6.76044 6.61598 6.87244 6.32797 7.12844 6.10397C7.35244 5.87998 7.64044 5.75197 7.99244 5.75197C8.34444 5.75197 8.63244 5.86398 8.88844 6.08797C9.11244 6.31197 9.24044 6.61598 9.24044 6.96797C9.24044 7.31997 9.11244 7.60798 8.88844 7.83198Z"
            fill="#197AFA"
            fill-rule="evenodd"
          />
        </g>
        <defs>
          <clippath
            id="clip0_3562_7307"
          >
            <rect
              fill="white"
              height="16"
              transform="translate(0 3)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-warning soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 50%;"
      >
        <div
          class="soui-progress-content"
        >
          50%
        </div>
      </div>
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 22"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_3565_11209)"
        >
          <path
            clip-rule="evenodd"
            d="M8.00028 18.3271C12.0469 18.3271 15.3274 15.0466 15.3274 11C15.3274 6.95332 12.0469 3.67285 8.00028 3.67285C3.95362 3.67285 0.673157 6.95332 0.673157 11C0.673157 15.0466 3.95362 18.3271 8.00028 18.3271ZM7.6247 5.75198C7.24209 5.75198 6.93799 6.07331 6.95905 6.45533L7.28556 12.3792C7.30503 12.7326 7.59728 13.0092 7.95121 13.0092H8.04935C8.40328 13.0092 8.69552 12.7326 8.715 12.3792L9.04151 6.45533C9.06257 6.07331 8.75846 5.75198 8.37586 5.75198H7.6247ZM8.88828 14.2566C8.64828 14.0326 8.34428 13.9206 7.99228 13.9206C7.64028 13.9206 7.35228 14.0326 7.12828 14.2566C6.87228 14.4806 6.76028 14.7686 6.76028 15.1206C6.76028 15.4726 6.87228 15.7606 7.12828 15.9846C7.35228 16.2086 7.64028 16.3366 7.99228 16.3366C8.34428 16.3366 8.63228 16.2246 8.88828 16.0006C9.11228 15.7766 9.24028 15.4726 9.24028 15.1206C9.24028 14.7686 9.11228 14.4806 8.88828 14.2566Z"
            fill-rule="evenodd"
          />
        </g>
        <defs>
          <clippath
            id="clip0_3565_11209"
          >
            <rect
              fill="white"
              height="16"
              transform="translate(0 3)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-success soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 100%;"
      >
        <div
          class="soui-progress-content"
        >
          100%
        </div>
      </div>
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM6.34315 13.8284L8.46305 15.9483C9.24511 16.7304 10.5122 16.7304 11.2943 15.9483L17.6569 9.58579C18.0472 9.19546 18.0472 8.5619 17.6569 8.17157C17.2665 7.78125 16.633 7.78125 16.2426 8.17157L10.5872 13.827C10.1962 14.218 9.56119 14.218 9.17016 13.827L7.75736 12.4142C7.36704 12.0239 6.73347 12.0239 6.34315 12.4142C5.95282 12.8045 5.95282 13.4381 6.34315 13.8284Z"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-danger soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 60%;"
      >
        <div
          class="soui-progress-content"
        >
          60%
        </div>
      </div>
    </div>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about linePop 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default soui-progress-line-pop"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 0%;"
      />
    </div>
    <div
      class="soui-progress-line-pop-wrapper"
      style="left: 0%; transform: translateX(-50%) rotate(0deg);"
    >
      <span
        class="soui-progress-line-pop-value"
      >
        0%
      </span>
      <span
        class="soui-progress-line-pop-arrow"
      />
    </div>
  </div>
  <br />
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about size 1`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      <span>
        75%
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%;"
      >
        <div
          class="soui-progress-content"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      <span>
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 2`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 3px; border-radius: 1.5px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%; border-radius: 1.5px;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 12px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 16px; border-radius: 8px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%; border-radius: 8px;"
      >
        <div
          class="soui-progress-content"
        >
          <span
            style="font-size: 12px;"
          >
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 48px; height: 48px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 48 48"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-dasharray="82.93804605477052,55.29203070318036"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 12px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 3`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 8px; border-radius: 4px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%; border-radius: 4px;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 16px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 24px; border-radius: 12px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%; border-radius: 12px;"
      >
        <div
          class="soui-progress-content"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 80px; height: 80px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 80 80"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-dasharray="143.25662500369455,95.50441666912971"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 16px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about type 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-success soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 100%;"
      />
    </div>
  </div>
  <br />
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 90%;"
      />
    </div>
  </div>
  <br />
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-warning soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 80%;"
      />
    </div>
  </div>
  <br />
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-danger soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 70%;"
      />
    </div>
  </div>
</div>
`;
